--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/AniPointLogoSmall.png">
+  <script src="https://kit.fontawesome.com/ad75fccd20.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
