--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,10 @@
 <body>
   <app-root></app-root>
 </body>
+<script type="text/javascript">
+  window.addEventListener('beforeunload', function (e) {
+      e.preventDefault();
+      e.returnValue = '';
+  });
+</script>
 </html>
