--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
   <title>AnipointWeb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://anipoint.yhsanave.me">
+  <meta property="og:title" content="AniPoint | Anime PowerPoint Generator">
+  <meta property="og:description" content="Automate the creation of PowerPoints for anime club meetings">
+  <meta property="og:image" content="https://raw.githubusercontent.com/yhsanave/AniPointWeb/master/src/assets/AniPointLogoSmall.png">
+  <meta name="keywords" content="anime, powerpoint, anime club, presentation"> 
   <link rel="icon" type="image/png" href="assets/AniPointLogoSmall.png">
   <script src="https://kit.fontawesome.com/ad75fccd20.js" crossorigin="anonymous"></script>
 </head>
